materials added me6166

--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -108,6 +108,7 @@ p
 <h3> <font color="pink">
 Updates/Announcements:</font></h3>
 	<ul>
+	<li> 24/1: Lecture notes for Week 2, Tutorial 1 (covering until materials dealt with in class), reading exercise on premixed flames added
 	<li> 20/1: Lecture notes added for Week 1 (will be updated once a week)
 	<li> 20/1: Source pdfs and sections in textbooks added with reading materials. If password is asked for, it is this-course-number_this-year (Ex: ME5107_2019)
 	<li> 17/1: Reading exercise for Module 1 added </h3><br> </li>
@@ -281,8 +282,7 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	</tr> 
 </table><br>
 
-<h3>Module 1: Premixed flames, with bunsen burner as an example: <a href="https://owncloud.iitm.ac.in/index.php/s/5QarvLAi3LHTrcW" target="_blank">Lecture notes</a> </h3>
-	<!--<a href="https://owncloud.iitm.ac.in/public.php?service=files&t=RUupt9g8MxPX20c" target="_blank">Tutorial</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=kQeLROs54Biyg0j" target="_blank">Reading Exercise</a>, </h3> -->
+<h3>Module 1: Premixed flames, with bunsen burner as an example: <a href="https://owncloud.iitm.ac.in/index.php/s/5QarvLAi3LHTrcW" target="_blank">Lecture notes</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/AY4yn7czp0PBz2L" target="_blank">Tutorial</a> </h3> <!-- <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=kQeLROs54Biyg0j" target="_blank">Reading Exercise</a>, </h3> -->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "55%">
 	<col width = "45%">	
@@ -297,7 +297,7 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	<td> <!-- General derivation: CKL $5.1/TP $2.3, <br> Low Mach number assumption: CKL $5.2.4.3--> </td></tr>
 	
 	<tr> <td> Flame speed calculations using FlameMaster </td>
-	<td> <!-- <a href="https://www.researchgate.net/profile/Ellen_Meeks/publication/260388319_PREMIX_a_fortran_program_for_modeling_steady_laminar_one-dimensional_premixed_flames/links/53fe0de20cf23bb019bd249d/PREMIX-a-fortran-program-for-modeling-steady-laminar-one-dimensional-premixed-flames.pdf" target="_blank">PREMIX documentation</a> --> </td></tr>
+	<td> <a href="https://www.researchgate.net/profile/Ellen_Meeks/publication/260388319_PREMIX_a_fortran_program_for_modeling_steady_laminar_one-dimensional_premixed_flames/links/53fe0de20cf23bb019bd249d/PREMIX-a-fortran-program-for-modeling-steady-laminar-one-dimensional-premixed-flames.pdf" target="_blank">Solution procedure for 1D premixed flame</a> </td></tr>
 	
 	<tr> <td> Quenching, ignition energy, and Flammability limits  </td>
 	<td> <!-- HSM1 $7.1, $7.2, $8.0 --> </td></tr>
