materials added me6166

--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -240,10 +240,12 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 <h3>Schedule for <font color="greenyellow">demonstrations</font> and <font color="khaki">tutorial sessions</font></h3>
 <!-- <button class="collapsible"><h4>View previous events</h4></button> 
  <div class="content">-->
+</table><br>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "55%">
 	<col width = "45%">		
-	<tr> <td> <font color="greenyellow">Premixed flames: Jet flame </td> <td> Jan 22nd </td></tr>
+	<tr> <td> <font color="khaki">Premixed flames: Tutorial 1 </td> <td> Feb 5th </td></tr>
+	<tr> <td> <font color="greenyellow">Premixed flames: Jet flame </td> <td> Jan 22nd, due on Jan 30th </td></tr>
 <!-- 
 	<tr> <td> <font color="greenyellow">Premixed flames: Jet flame <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=2ZU0AJXXICyb2g7" target="_blank">Questionnaire</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=BaqqHxcjNhr8wvb" target="_blank">Images</a>. Due by February 21st </font></td> 
 	<td> February 7th</td></tr>
