materials added me6166

--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -240,10 +240,13 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 <h3>Schedule for <font color="greenyellow">demonstrations</font> and <font color="khaki">tutorial sessions</font></h3>
 <!-- <button class="collapsible"><h4>View previous events</h4></button> 
  <div class="content">-->
-</table><br>
+</table>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "55%">
-	<col width = "45%">		
+	<col width = "45%">	
+		<tr> <th> <h3> Topic </h3>
+			 <th> <h3> Schedule </h3>
+		</tr>
 	<tr> <td> <font color="khaki">Premixed flames: Tutorial 1 </td> <td> Feb 5th </td></tr>
 	<tr> <td> <font color="greenyellow">Premixed flames: Jet flame </td> <td> Jan 22nd, due on Jan 30th </td></tr>
 <!-- 
