bundle up old info

--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -111,12 +111,12 @@ Updates/Announcements:</font></h3>
 	<li> 24/1: Lecture notes for Week 2, Tutorial 1 (covering until materials dealt with in class), reading material on premixed flames added
 	<li> 20/1: Lecture notes added for Week 1 (will be updated once a week)
 	<li> 20/1: Source pdfs and sections in textbooks added with reading materials. If password is asked for, it is this-course-number_this-year (Ex: ME5107_2019)
-	<li> 17/1: Reading exercise for Module 1 added </h3><br> </li>
-	<li> 3/1: Welcome to ME6166! Our first class is on Jan 13th (Monday): <a href="https://owncloud.iitm.ac.in/index.php/s/oWR8SuyNSaWzamv" target="_blank">Getting started</a> </h3><br> </li>
 	</ul>
-<!--	<button class="collapsible"><h4>View older announcements</h4></button>
+	<button class="collapsible"><h4>View older announcements</h4></button>
 	<div class="content">
--->
+	<ul>	<li> 17/1: Reading exercise for Module 1 added </h3><br> </li>
+		<li> 3/1: Welcome to ME6166! Our first class is on Jan 13th (Monday): <a href="https://owncloud.iitm.ac.in/index.php/s/oWR8SuyNSaWzamv" target="_blank">Getting started</a> </h3><br> </li>
+	</ul>	
 </div>
 </td></tr>
 </table><br>
@@ -157,11 +157,9 @@ Updates/Announcements:</font></h3>
 		 <!-- <li> Lecture notes: 5% <a href="https://owncloud.iitm.ac.in/index.php/s/bTuzOTYzPEcjqf6" target="_blank">March/April Schedule</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=8YtY5rA5G4JVuxz" target="_blank">LaTeX Template</a></li> -->
 		 <li> <font color="lightgreen">About a third of the exams will be in line with the tutorial sets</font>
 	</ul>
-</tr>
-</table><br>
 
-<!-- <button class="collapsible"><h5>View more course info</h5></button>
-<div class="content"> -->
+<button class="collapsible"><h5>View more course info</h5></button>
+<div class="content">
 <table border="1" cellspacing="1" cellpadding="1"  width="100%">
 <tr><td width="50%">
 <h3> Instructors: </h3>
@@ -211,9 +209,9 @@ Email: varuns@iitm.ac.in </li>
 </td>
 </tr>
 </table>
-
-
 </div><br>
+</tr>
+</table><br>
 
 
 
@@ -244,11 +242,8 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "55%">
 	<col width = "45%">	
-		<tr> <th> <h3> Topic </h3>
-			 <th> <h3> Schedule </h3>
-		</tr>
 	<tr> <td> <font color="khaki">Premixed flames: Tutorial 1 </td> <td> Feb 5th </td></tr>
-	<tr> <td> <font color="greenyellow">Premixed flames: Jet flame </td> <td> Jan 22nd, due on Jan 30th </td></tr>
+	<tr> <td> <font color="greenyellow">Premixed flames: Jet flame </td> <td> Jan 22nd, report due on Jan 30th </td></tr>
 <!-- 
 	<tr> <td> <font color="greenyellow">Premixed flames: Jet flame <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=2ZU0AJXXICyb2g7" target="_blank">Questionnaire</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=BaqqHxcjNhr8wvb" target="_blank">Images</a>. Due by February 21st </font></td> 
 	<td> February 7th</td></tr>
