--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -108,6 +108,7 @@ p
 <h3> <font color="pink">
 Updates/Announcements:</font></h3>
 	<ul>
+	<li> 27/1: Tutorial 1 updated
 	<li> 24/1: Lecture notes for Week 2, Tutorial 1 (covering until materials dealt with in class), reading material on premixed flames added
 	<li> 20/1: Lecture notes added for Week 1 (will be updated once a week)
 	<li> 20/1: Source pdfs and sections in textbooks added with reading materials. If password is asked for, it is this-course-number_this-year (Ex: ME5107_2019)
