adding materials me6166

--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -108,7 +108,7 @@ p
 <h3> <font color="pink">
 Updates/Announcements:</font></h3>
 	<ul>
-	<li> 27/1: Tutorial 1 updated
+	<li> 30/1: Tutorial 1 updated, Computational exercise added (see within tutorial/demos/exercises)
 	<li> 24/1: Lecture notes for Week 2, Tutorial 1 (covering until materials dealt with in class), reading material on premixed flames added
 	<li> 20/1: Lecture notes added for Week 1 (will be updated once a week)
 	<li> 20/1: Source pdfs and sections in textbooks added with reading materials. If password is asked for, it is this-course-number_this-year (Ex: ME5107_2019)
@@ -236,15 +236,16 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 
 <table border="1" cellspacing="1" cellpadding="1"  width="100%">
 <tr> <td width="100%">
-<h3>Schedule for <font color="greenyellow">demonstrations</font> and <font color="khaki">tutorial sessions</font></h3>
+<h3>Schedule for <font color="greenyellow">demonstrations, computational exercises,</font> and <font color="khaki">tutorial sessions</font></h3>
 <!-- <button class="collapsible"><h4>View previous events</h4></button> 
  <div class="content">-->
 </table>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "55%">
 	<col width = "45%">	
+	<tr> <td> <font color="greenyellow">Premixed flames: <a href="https://owncloud.iitm.ac.in/index.php/s/VYD5xrxFi5lWpwu">Computational Exercise</a> </td> <td> Due on Feb 20th </td></tr>
 	<tr> <td> <font color="khaki">Premixed flames: Tutorial 1 </td> <td> Feb 5th </td></tr>
-	<tr> <td> <font color="greenyellow">Premixed flames: Jet flame </td> <td> Jan 22nd, report due on Jan 30th </td></tr>
+	<tr> <td> <font color="greenyellow">Premixed flames: Jet flame </td> <td> Jan 22nd, report due on Feb 6th </td></tr>
 <!-- 
 	<tr> <td> <font color="greenyellow">Premixed flames: Jet flame <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=2ZU0AJXXICyb2g7" target="_blank">Questionnaire</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=BaqqHxcjNhr8wvb" target="_blank">Images</a>. Due by February 21st </font></td> 
 	<td> February 7th</td></tr>
@@ -301,7 +302,7 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	<td> <a href="https://www.researchgate.net/profile/Ellen_Meeks/publication/260388319_PREMIX_a_fortran_program_for_modeling_steady_laminar_one-dimensional_premixed_flames/links/53fe0de20cf23bb019bd249d/PREMIX-a-fortran-program-for-modeling-steady-laminar-one-dimensional-premixed-flames.pdf" target="_blank">Solution procedure for 1D premixed flame</a> </td></tr>
 	
 	<tr> <td> Quenching, ignition energy, and Flammability limits  </td>
-	<td> <!-- HSM1 $7.1, $7.2, $8.0 --> </td></tr>
+	<td> HSM1 $7.1, $7.2, $8.0 </td></tr>
 	
 	<!-- ><tr> <td>   </td>
 	<td> DD $3.1, $3.3,  CKL $8.5 </td></tr>-->
