adding announcements and materials

--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -98,7 +98,7 @@ p
 <tr> <td><center> <h2> Jan-May 2020</h2> </center></td> </tr>
 </table> 
 
-    <center>  <img src="Flyer_Jan_May_2020.jpg" style="width:100%"> </center>
+  <center><a href="./Flyer_Jan_May_2020.jpg" target="_blank">View course flyer</a></center><br>
 
 
 <!-- <center>For a glimpse of the course content, check out the <a href="./ME6166_Jan_May_2019.html" target="_blank">website for the class offered last time</a>.</center><br> -->
@@ -107,15 +107,18 @@ p
 <tr> <td width="100%">
 <h3> <font color="pink">
 Updates/Announcements:</font></h3>
+<i> Passcode to access the course materials (if required) is this-course-number_this-year (Ex: ME5107_2019)</i>
 	<ul>
+	<li> 5/2: Tutorial 1 updated, Lecture notes updated
 	<li> 30/1: Tutorial 1 updated, Computational exercise added (see within tutorial/demos/exercises)
-	<li> 24/1: Lecture notes for Week 2, Tutorial 1 (covering until materials dealt with in class), reading material on premixed flames added
-	<li> 20/1: Lecture notes added for Week 1 (will be updated once a week)
-	<li> 20/1: Source pdfs and sections in textbooks added with reading materials. If password is asked for, it is this-course-number_this-year (Ex: ME5107_2019)
 	</ul>
 	<button class="collapsible"><h4>View older announcements</h4></button>
 	<div class="content">
-	<ul>	<li> 17/1: Reading exercise for Module 1 added </h3><br> </li>
+	<ul>
+		<li> 24/1: Lecture notes for Week 2, Tutorial 1 (covering until materials dealt with in class), reading material on premixed flames added
+		<li> 20/1: Lecture notes added for Week 1 (will be updated once a week)
+		<li> 20/1: Source pdfs and sections in textbooks added with reading materials. 
+		<li> 17/1: Reading exercise for Module 1 added </h3><br> </li>
 		<li> 3/1: Welcome to ME6166! Our first class is on Jan 13th (Monday): <a href="https://owncloud.iitm.ac.in/index.php/s/oWR8SuyNSaWzamv" target="_blank">Getting started</a> </h3><br> </li>
 	</ul>	
 </div>
