--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -311,11 +311,11 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	<td> DD $3.1, $3.3,  CKL $8.5 </td></tr>-->
 	
 	<tr> <td> Flame stretch  </td>
-	<td> <!-- TP $2.6 --> </td></tr>
+	<td> CKL $10.3, $10.9.1 </td></tr>
 	
 	<tr> <td> Turbulent premixed flames  </td>
-	<td>  <!-- Introduction: CKL $11.1, $11.2, $11.3<br>
-		Modeling: TP $5.1.3, $5.3.2, $5.3.3, $5.3.5, $5.3.6<br> -->
+	<td> Introduction: CKL $11.1, $11.2, $11.3<br>
+		Modeling: TP $5.1.3, $5.3.2, $5.3.3, $5.3.5, $5.3.6<br>
 	 </td></tr>
 </table><br>
 
