--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -109,6 +109,7 @@ p
 Updates/Announcements:</font></h3>
 <i> Passcode to access the course materials (if required) is this-course-number_this-year (Ex: ME5107_2019)</i>
 	<ul>
+	<li> 6/2: Reading materials added for recent topics
 	<li> 5/2: Tutorial 1 updated, Lecture notes updated
 	<li> 30/1: Tutorial 1 updated, Computational exercise added (see within tutorial/demos/exercises)
 	</ul>
