tut1 hints added

--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -109,13 +109,14 @@ p
 Updates/Announcements:</font></h3>
 <i> Passcode to access the course materials (if required) is this-course-number_this-year (Ex: ME5107_2019)</i>
 	<ul>
+	<li> 7/2: Solution hints added for tutorial 1
 	<li> 6/2: Reading materials added for recent topics
-	<li> 5/2: Tutorial 1 updated, Lecture notes updated
-	<li> 30/1: Tutorial 1 updated, Computational exercise added (see within tutorial/demos/exercises)
 	</ul>
 	<button class="collapsible"><h4>View older announcements</h4></button>
 	<div class="content">
 	<ul>
+		<li> 5/2: Tutorial 1 updated, Lecture notes updated
+		<li> 30/1: Tutorial 1 updated, Computational exercise added (see within tutorial/demos/exercises)
 		<li> 24/1: Lecture notes for Week 2, Tutorial 1 (covering until materials dealt with in class), reading material on premixed flames added
 		<li> 20/1: Lecture notes added for Week 1 (will be updated once a week)
 		<li> 20/1: Source pdfs and sections in textbooks added with reading materials. 
@@ -247,6 +248,7 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "55%">
 	<col width = "45%">	
+	<tr> <td> <font color="greenyellow">Non-Premixed flames </td> <td> Feb 19th </td></tr>
 	<tr> <td> <font color="greenyellow">Premixed flames: <a href="https://owncloud.iitm.ac.in/index.php/s/VYD5xrxFi5lWpwu">Computational Exercise</a> </td> <td> Due on Feb 20th </td></tr>
 	<tr> <td> <font color="khaki">Premixed flames: Tutorial 1 </td> <td> Feb 5th </td></tr>
 	<tr> <td> <font color="greenyellow">Premixed flames: Jet flame </td> <td> Jan 22nd, report due on Feb 6th </td></tr>
@@ -288,7 +290,7 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	</tr> 
 </table><br>
 
-<h3>Module 1: Premixed flames, with bunsen burner as an example: <a href="https://owncloud.iitm.ac.in/index.php/s/5QarvLAi3LHTrcW" target="_blank">Lecture notes</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/AY4yn7czp0PBz2L" target="_blank">Tutorial</a> </h3> <!-- <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=kQeLROs54Biyg0j" target="_blank">Reading Exercise</a>, </h3> -->
+<h3>Module 1: Premixed flames, with bunsen burner as an example: <a href="https://owncloud.iitm.ac.in/index.php/s/5QarvLAi3LHTrcW" target="_blank">Lecture notes</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/AY4yn7czp0PBz2L" target="_blank">Tutorial</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/9nAUk622JONC7ZJ" target="_blank">Hints</a> </h3> <!-- <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=kQeLROs54Biyg0j" target="_blank">Reading Exercise</a>, </h3> -->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "55%">
 	<col width = "45%">	
