lecture notes update

--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -109,6 +109,7 @@ p
 Updates/Announcements:</font></h3>
 <i> Passcode to access the course materials (if required) is this-course-number_this-year (Ex: ME5107_2019)</i>
 	<ul>
+	<li> 12/2: Lecture notes for Week 3 added
 	<li> 7/2: Solution hints added for tutorial 1
 	<li> 6/2: Reading materials added for recent topics
 	</ul>
