--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -329,7 +329,7 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	<col width = "45%">	
    <tr> 
 	<td> Candle flame, counterflow non-premixed flame </td>
-	<td> <!-- TP $3.1, <a href="https://www.sciencedirect.com/science/article/pii/S0082078489801584" target="_blank">Gov Eqns: Opposed flow flame</a> --> </td> </tr>
+	<td> TP $3.1, <a href="https://www.sciencedirect.com/science/article/pii/S0082078489801584" target="_blank">Gov Eqns: Opposed flow flame</a> </td> </tr>
 	
 	<tr> <td> Opp-diff flame structure at different strain rates using FlameMaster </td>
 	<td> <!-- Solution Procedure: <a href="https://www.osti.gov/servlets/purl/568983" target="_blank">OPPDIFF</a>, Potential flow configuration (provided with  FlameMaster manual) --> </td></tr>
