removing me1100 tut

--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -245,7 +245,7 @@ Updates/Announcements:</font></h3>
 </table>
 <br>
 
-<h3>Module 1: Fundamental concepts <a href="https://owncloud.iitm.ac.in/index.php/s/EKMbpOk12WgwQjU" target="_blank">Lecture Summary</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/ELd32wS2DbPo2t5" target="_blank">Practice problems</a> </h3>
+<h3>Module 1: Fundamental concepts <a href="https://owncloud.iitm.ac.in/index.php/s/EKMbpOk12WgwQjU" target="_blank">Lecture Summary</a></h3><!--, <a href="https://owncloud.iitm.ac.in/index.php/s/ELd32wS2DbPo2t5" target="_blank">Practice problems</a> </h3>-->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
@@ -257,7 +257,7 @@ Updates/Announcements:</font></h3>
 </table>
 <br>
 
-<h3>Module 2: First law of thermodynamics for a system <a href="https://owncloud.iitm.ac.in/index.php/s/XYLjauE7T3GJlR0" target="_blank">Lecture Summary</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/UdUX6wvnOGRqUKI" target="_blank">Practice problems</a></h3>
+<h3>Module 2: First law of thermodynamics for a system <a href="https://owncloud.iitm.ac.in/index.php/s/XYLjauE7T3GJlR0" target="_blank">Lecture Summary</a></h3> <!--, <a href="https://owncloud.iitm.ac.in/index.php/s/UdUX6wvnOGRqUKI" target="_blank">Practice problems</a></h3> -->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
@@ -268,7 +268,7 @@ Updates/Announcements:</font></h3>
 
 <center><i> Quiz-I roughly around this time </i></center>
 
-<h3>Module 3: Pure substances <a href="https://owncloud.iitm.ac.in/index.php/s/f9e5SwQA4Cfc6IF" target="_blank">Lecture Summary</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/7Num6ynUvWYeB8o" target="_blank">Practice problems</a></h3>
+<h3>Module 3: Pure substances <a href="https://owncloud.iitm.ac.in/index.php/s/f9e5SwQA4Cfc6IF" target="_blank">Lecture Summary</a></h3><!--, <a href="https://owncloud.iitm.ac.in/index.php/s/7Num6ynUvWYeB8o" target="_blank">Practice problems</a></h3>-->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
@@ -283,7 +283,7 @@ Updates/Announcements:</font></h3>
 <h5>Module 4: First law of thermodynamics for flow processes  </h3> 
 </button> 
 <div class="content"> -->
-<h3>Module 4: First law of thermodynamics for flow processes  <a href="https://owncloud.iitm.ac.in/index.php/s/2S1EKgnyf1xZcxc" target="_blank">Lecture Summary</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/Pvw9Uq2PXWzopFI" target="_blank">Practice Problems</a></h3>
+<h3>Module 4: First law of thermodynamics for flow processes  <a href="https://owncloud.iitm.ac.in/index.php/s/2S1EKgnyf1xZcxc" target="_blank">Lecture Summary</a></h3><!--, <a href="https://owncloud.iitm.ac.in/index.php/s/Pvw9Uq2PXWzopFI"  target="_blank">Practice Problems</a></h3>-->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
@@ -298,7 +298,7 @@ Updates/Announcements:</font></h3>
 
 <!-- <button class="collapsible"><h5>Module 5: Second law for heat engines</h5></button> 
 <div class="content"> -->
-<h3>Module 5: Second law for heat engines <a href="https://owncloud.iitm.ac.in/index.php/s/i75raMWFvC3HTnM" target="_blank">Practice Problems</a></h3>
+<h3>Module 5: Second law for heat engines</h3> <!-- <a href="https://owncloud.iitm.ac.in/index.php/s/i75raMWFvC3HTnM" target="_blank">Practice Problems</a></h3>-->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
@@ -313,7 +313,7 @@ Updates/Announcements:</font></h3>
 
 <!-- <button class="collapsible"><h5>Module 6: Second law for processes</h5></button>  
 <div class="content"> -->
-<h3>Module 6: Second law for processes <a href="https://owncloud.iitm.ac.in/index.php/s/hVHWC66HlJ4tAvD" target="_blank">Practice Problems</a></h3>
+<h3>Module 6: Second law for processes</h3><!-- <a href="https://owncloud.iitm.ac.in/index.php/s/hVHWC66HlJ4tAvD" target="_blank">Practice Problems</a></h3>-->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
