--- a/teaching/ME6060_Jul_Nov_2017.html
+++ b/teaching/ME6060_Jul_Nov_2017.html
@@ -38,6 +38,7 @@ h3{
 <center> <h1> ME6060: Fundamentals of Combustion <br>
 Jul-Nov 2017 </h1>
 <h2><a href="https://owncloud.iitm.ac.in/index.php/s/l0jaXB3K4Wcsg5P" target="_blank">Course contents</a></h2>
+<i> Passcode to access the course materials (if required) is this-course-number_this-year (Ex: ME5107_2019)</i>
 </center>
 
 
