--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -202,7 +202,7 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3> 
 <ul>
-	<li>13/11: <a href="https://owncloud.iitm.ac.in/index.php/s/cKbOmCy0bS8yhS1" target="_blank">End Sem 2017</a> is now available for practice. </li>
+	<!--<li>13/11: <a href="https://owncloud.iitm.ac.in/index.php/s/cKbOmCy0bS8yhS1" target="_blank">End Sem 2017</a> is now available for practice. </li>-->
 	<li>8/11: Module 6: practice problems added
 	<li>4/11: Module 6: reading materials indicated
 	<li>25/10: Module 5: reading material and practise problems added
