--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -108,13 +108,14 @@ p
 Updates/Announcements:</font></h3>
 <i> Passcode to access the course materials (if required) is this-course-number_this-year (Ex: ME5107_2019)</i>
 	<ul>
-	<li> 12/2: Lecture notes for Week 3 added
-	<li> 7/2: Solution hints added for tutorial 1
-	<li> 6/2: Reading materials added for recent topics
+	<li> 17/2: Lecture notes for Week 4 added
 	</ul>
 	<button class="collapsible"><h4>View older announcements</h4></button>
 	<div class="content">
 	<ul>
+		<li> 12/2: Lecture notes for Week 3 added
+		<li> 7/2: Solution hints added for tutorial 1
+		<li> 6/2: Reading materials added for recent topics
 		<li> 5/2: Tutorial 1 updated, Lecture notes updated
 		<li> 30/1: Tutorial 1 updated, Computational exercise added (see within tutorial/demos/exercises)
 		<li> 24/1: Lecture notes for Week 2, Tutorial 1 (covering until materials dealt with in class), reading material on premixed flames added
@@ -305,7 +306,7 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	<td> <!-- General derivation: CKL $5.1/TP $2.3, <br> Low Mach number assumption: CKL $5.2.4.3--> </td></tr>
 	
 	<tr> <td> Flame speed calculations using FlameMaster </td>
-	<td> <a href="https://www.researchgate.net/profile/Ellen_Meeks/publication/260388319_PREMIX_a_fortran_program_for_modeling_steady_laminar_one-dimensional_premixed_flames/links/53fe0de20cf23bb019bd249d/PREMIX-a-fortran-program-for-modeling-steady-laminar-one-dimensional-premixed-flames.pdf" target="_blank">Solution procedure for 1D premixed flame</a> </td></tr>
+	<td> <a href="https://www.researchgate.net/profile/Ellen_Meeks/publication/260388319_PREMIX_a_fortran_program_for_modeling_steady_laminar_one-dimensional_premixed_flames/links/53fe0de20cf23bb019bd249d/PREMIX-a-fortran-program-for-modeling-steady-laminar-one-dimensional-premixed-flames.pdf" target="_blank">Solution procedure: PREMIX</a> </td></tr>
 	
 	<tr> <td> Quenching, ignition energy, and Flammability limits  </td>
 	<td> HSM1 $7.1, $7.2, $8.0 </td></tr>
@@ -322,7 +323,7 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	 </td></tr>
 </table><br>
 
-<h3>Module 2: Non-premixed flames, with counterflow diffusion flame as an example: <!--<a href="https://owncloud.iitm.ac.in/index.php/s/uDStSgYMsRWRGzo" target="_blank">Tutorial</a> --> </h3>
+<h3>Module 2: Non-premixed flames, with counterflow diffusion flame as an example: <a href="https://owncloud.iitm.ac.in/index.php/s/qBYKDyah6WaAydh" target="_blank">Lecture notes</a> <!--<a href="https://owncloud.iitm.ac.in/index.php/s/uDStSgYMsRWRGzo" target="_blank">Tutorial</a> --> </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "55%">
 	<col width = "45%">	
@@ -331,7 +332,7 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	<td> TP $3.1, <a href="https://www.sciencedirect.com/science/article/pii/S0082078489801584" target="_blank">Gov Eqns: Opposed flow flame</a> </td> </tr>
 	
 	<tr> <td> Opp-diff flame structure at different strain rates using FlameMaster </td>
-	<td> <!-- Solution Procedure: <a href="https://www.osti.gov/servlets/purl/568983" target="_blank">OPPDIFF</a>, Potential flow configuration (provided with  FlameMaster manual) --> </td></tr>
+	<td> <a href="https://www.osti.gov/servlets/purl/568983" target="_blank">Solution Procedure: OPPDIFF</a>, Potential flow configuration (provided with FlameMaster manual) </td></tr>
 	
 	<tr> <td> Flamelet equations and concept of scalar dissipation rate  </td>
 	<td> <!-- TP $3.2, NP $9.1 --> </td></tr>
