--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -108,6 +108,7 @@ p
 Updates/Announcements:</font></h3>
 <i> Passcode to access the course materials (if required) is this-course-number_this-year (Ex: ME5107_2019)</i>
 	<ul>
+	<li> 21/2: Computational exercise on non-premixed flames, first version of tutorial 2 added
 	<li> 17/2: Lecture notes for Week 4 added
 	</ul>
 	<button class="collapsible"><h4>View older announcements</h4></button>
@@ -242,17 +243,25 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 
 <table border="1" cellspacing="1" cellpadding="1"  width="100%">
 <tr> <td width="100%">
-<h3>Schedule for <font color="greenyellow">demonstrations, computational exercises,</font> and <font color="khaki">tutorial sessions</font></h3>
-<!-- <button class="collapsible"><h4>View previous events</h4></button> 
- <div class="content">-->
+<h3>Schedule for <font color="greenyellow">demonstrations, computational exercises,</font> and <font color="khaki">tutorial discussion sessions</font></h3>
 </table>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "55%">
 	<col width = "45%">	
-	<tr> <td> <font color="greenyellow">Non-Premixed flames </td> <td> Feb 19th </td></tr>
+	<tr> <td> <font color="khaki">Non-Premixed flames: Tutorial 2 </td> <td> Mar 4th </td></tr>	
+	<tr> <td> <font color="greenyellow">Non-Premixed flames: <a href="https://owncloud.iitm.ac.in/index.php/s/W9QMwpwb9ASHufk">Computational Exercise</a> </td> <td> Due on Mar 6th </td></tr>
+	<tr> <td> <font color="greenyellow">Non-Premixed flames: Stability, smoke point, extinction </td> <td> Feb 19th, report due on March 4th </td></tr>
 	<tr> <td> <font color="greenyellow">Premixed flames: <a href="https://owncloud.iitm.ac.in/index.php/s/VYD5xrxFi5lWpwu">Computational Exercise</a> </td> <td> Due on Feb 20th </td></tr>
+</table>
+<button class="collapsible"><h4>View previous events</h4></button> 
+ <div class="content">
+<table border="1" cellspacing="2" cellpadding="2" width="100%">
+	<col width = "55%">
+	<col width = "45%">	
 	<tr> <td> <font color="khaki">Premixed flames: Tutorial 1 </td> <td> Feb 5th </td></tr>
-	<tr> <td> <font color="greenyellow">Premixed flames: Jet flame </td> <td> Jan 22nd, report due on Feb 6th </td></tr>
+	<tr> <td> <font color="greenyellow">Premixed flames: Flat flame burner </td> <td> Jan 22nd, report due on Feb 6th </td></tr>
+</table>
+</div>
 <!-- 
 	<tr> <td> <font color="greenyellow">Premixed flames: Jet flame <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=2ZU0AJXXICyb2g7" target="_blank">Questionnaire</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=BaqqHxcjNhr8wvb" target="_blank">Images</a>. Due by February 21st </font></td> 
 	<td> February 7th</td></tr>
@@ -280,7 +289,6 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	<tr> <td> <font color="greenyellow">Solid fuel combustion: tutorial/demo: Coal gasifier, MILD inspired burner for biomass</font></td>
 	<td> April 26th</td></tr>
 -->
-</table>
 
 <br><br>
 <table border="1" cellspacing="2" cellpadding="2"  width="100%">
@@ -323,7 +331,7 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	 </td></tr>
 </table><br>
 
-<h3>Module 2: Non-premixed flames, with counterflow diffusion flame as an example: <a href="https://owncloud.iitm.ac.in/index.php/s/qBYKDyah6WaAydh" target="_blank">Lecture notes</a> <!--<a href="https://owncloud.iitm.ac.in/index.php/s/uDStSgYMsRWRGzo" target="_blank">Tutorial</a> --> </h3>
+<h3>Module 2: Non-premixed flames, with counterflow diffusion flame as an example: <a href="https://owncloud.iitm.ac.in/index.php/s/qBYKDyah6WaAydh" target="_blank">Lecture notes</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/O0luGc4K8QtGrbm" target="_blank">Tutorial</a></h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "55%">
 	<col width = "45%">	
