--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -108,7 +108,7 @@ p
 Updates/Announcements:</font></h3>
 <i> Passcode to access the course materials (if required) is this-course-number_this-year (Ex: ME5107_2019)</i>
 	<ul>
-	<li> 21/2: Computational exercise on non-premixed flames, first version of tutorial 2 added
+	<li> 21/2: Computational exercise on non-premixed flames, first version of tutorial 2, video input for demo 2 added
 	<li> 17/2: Lecture notes for Week 4 added
 	</ul>
 	<button class="collapsible"><h4>View older announcements</h4></button>
@@ -250,7 +250,7 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	<col width = "45%">	
 	<tr> <td> <font color="khaki">Non-Premixed flames: Tutorial 2 </td> <td> Mar 4th </td></tr>	
 	<tr> <td> <font color="greenyellow">Non-Premixed flames: <a href="https://owncloud.iitm.ac.in/index.php/s/W9QMwpwb9ASHufk">Computational Exercise</a> </td> <td> Due on Mar 6th </td></tr>
-	<tr> <td> <font color="greenyellow">Non-Premixed flames: Stability, smoke point, extinction </td> <td> Feb 19th, report due on March 4th </td></tr>
+	<tr> <td> <font color="greenyellow">Non-Premixed flames: Stability, smoke point, extinction; <a href="https://owncloud.iitm.ac.in/index.php/s/VBXum6Nm3kRJTEk" target="_blank">Video for Q1</a> </td> <td> Feb 19th, report due on March 4th </td></tr>
 	<tr> <td> <font color="greenyellow">Premixed flames: <a href="https://owncloud.iitm.ac.in/index.php/s/VYD5xrxFi5lWpwu">Computational Exercise</a> </td> <td> Due on Feb 20th </td></tr>
 </table>
 <button class="collapsible"><h4>View previous events</h4></button> 
