--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -344,17 +344,15 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	<td> <a href="https://www.osti.gov/servlets/purl/568983" target="_blank">Solution Procedure: OPPDIFF</a>, Potential flow configuration (provided with FlameMaster manual) </td></tr>
 	
 	<tr> <td> Flamelet equations and concept of scalar dissipation rate  </td>
-	<td> <!-- TP $3.2, NP $9.1 --> </td></tr>
+	<td> TP $3.2, NP $9.1 </td></tr>
 	
-	<!-- <tr> <td> Flame structure problem: Burke Schumann flame with fast chemistry assumption<br>
+	<tr> <td> Flame structure problem: Burke Schumann flame with fast chemistry assumption<br>
 		<p style="padding-left: 205px;">Flame location, flame temperature</p></td>
 	<td> TP $3.3</td></tr>
 
-	<tr> <td> Mixing problem: 
-	-->
-	<tr> <td> Steady strained 1D flame with fast chemistry assumption<br> 
-		<p style="padding-left: 138px;">Flamelet solution, relation of scalar dissipation rate to strain rate</p>  </td>
-	<td> <!-- TP $3.4.2 --> </td></tr> 
+	<tr> <td> Mixing problem: Steady strained 1D flame with fast chemistry assumption<br> 
+		<p style="padding-left: 138px;">Relation of scalar dissipation rate to strain rate</p>  </td>
+	<td> TP $3.4.2 </td></tr> 
 	
 	<tr> <td> Ignition, extinction, and S-curve </td>
 	<td> <!-- <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=XywzblFfE6ngdvv" target="_blank">Extinction Demo</a>, NP $9.4, NP $9.7 --> </td></tr>
