--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -347,11 +347,13 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	<td> TP $3.2, NP $9.1 </td></tr>
 	
 	<tr> <td> Flame structure problem: Burke Schumann flame with fast chemistry assumption<br>
-		<p style="padding-left: 205px;">Flame location, flame temperature</p></td>
+	<!--	<p style="padding-left: 205px;">Flame location, flame temperature</p>-->
+	</td> 
 	<td> TP $3.3</td></tr>
 
 	<tr> <td> Mixing problem: Steady strained 1D flame with fast chemistry assumption<br> 
-		<p style="padding-left: 138px;">Relation of scalar dissipation rate to strain rate</p>  </td>
+	<!--	<p style="padding-left: 138px;">Relation of scalar dissipation rate to strain rate</p>  -->
+	</td>
 	<td> TP $3.4.2 </td></tr> 
 	
 	<tr> <td> Ignition, extinction, and S-curve </td>
