adding tut 2 lecture notes

--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -108,6 +108,7 @@ p
 Updates/Announcements:</font></h3>
 <i> Passcode to access the course materials (if required) is this-course-number_this-year (Ex: ME5107_2019)</i>
 	<ul>
+	<li> 2/3: Tutorial 2 final version, Lecture notes for Module 2 complete
 	<li> 27/2: Tutorial 2 updated
 	<li> 20/2: Computational exercise on non-premixed flames, first version of tutorial 2, video input for demo 2 added
 	<li> 17/2: Lecture notes for Week 4 added
@@ -346,7 +347,7 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	<tr> <td> Flamelet equations and concept of scalar dissipation rate  </td>
 	<td> TP $3.2, NP $9.1 </td></tr>
 	
-	<tr> <td> Flame structure problem: Burke Schumann flame with fast chemistry assumption<br>
+	<tr> <td> Flame structure problem: Burke Schumann flame using fast chemistry assumption<br>
 	<!--	<p style="padding-left: 205px;">Flame location, flame temperature</p>-->
 	</td> 
 	<td> TP $3.3</td></tr>
@@ -357,10 +358,10 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	<td> TP $3.4.2 </td></tr> 
 	
 	<tr> <td> Ignition, extinction, and S-curve </td>
-	<td> <!-- <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=XywzblFfE6ngdvv" target="_blank">Extinction Demo</a>, NP $9.4, NP $9.7 --> </td></tr>
+	<td> <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=XywzblFfE6ngdvv" target="_blank">Extinction Demo</a>, NP $9.4, NP $9.7 </td></tr>
 	
 	<tr> <td> Turbulent non-premixed flames  </td>
-	<td> <!-- CKL $11.4, TP $6.4.3, TP $6.4.5 --> </td></tr>
+	<td>  CKL $11.4, TP $6.4.3, TP $6.4.5 </td></tr>
 	
 </table><br>
 
