adding tut 2 lecture notes

--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -154,9 +154,9 @@ Updates/Announcements:</font></h3>
 <table border="1" cellspacing="1" cellpadding="1"  width="100%">
 <tr> <td width="100%"><h3> Grading policy: </h3>
 	<ul> <li> Mid-semester exam: 30% <br>
-		<!-- <p style="padding-left: 50px;"><font color="lightgreen">Date: March 5th (Tuesday), Time: 6 PM--8 PM, Venue: TDCE seminar hall</font></p>
-		<p style="padding-left: 50px;"><font color="lightgreen">Cheat sheet: One A4 size sheet (written on both sides) is permitted</font></p></li>
-		<p style="padding-left: 50px;"><a href="https://owncloud.iitm.ac.in/index.php/s/kYst8b9cLpzIgwn" target="_blank">Exam</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/ewnybY9v4VlI2wz">Solutions</a></p> -->
+		<p style="padding-left: 50px;"><font color="lightgreen">Date: March 14th (Saturday), Time: 10 AM--12 PM, Venue: TDCE seminar hall</font></p>
+		<p style="padding-left: 50px;"><font color="lightgreen">Open notes and text books</font></p></li>
+		<!-- <p style="padding-left: 50px;"><a href="https://owncloud.iitm.ac.in/index.php/s/kYst8b9cLpzIgwn" target="_blank">Exam</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/ewnybY9v4VlI2wz">Solutions</a></p> -->
 		 <li> Final exam: 50%</li>
 		<!-- <p style="padding-left: 50px;"><font color="lightgreen">Date: May 3rd (Friday), Time: 9 AM--12 PM, Venue: TDCE seminar hall</font></p>
 		<p style="padding-left: 50px;"><font color="lightgreen">Cheat sheet: Two A4 size sheets (written on both sides) are permitted</font></p>
