--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -100,11 +100,11 @@ p
 
   <center><a href="./Flyer_Jan_May_2020.jpg" target="_blank">View course flyer</a></center><br>
 
-<center> <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSflmazMV061cQovIJfcNHLWq14tHeoHHTjErjSA3D3FmXrtEw/viewform?embedded=true" width="640" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe> </center>
-
-<br>
-<a href="https://docs.google.com/forms/d/e/1FAIpQLSflmazMV061cQovIJfcNHLWq14tHeoHHTjErjSA3D3FmXrtEw/viewform?usp=sf_link"> Click to take the survey</a>
-
+<center> 
+	<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSflmazMV061cQovIJfcNHLWq14tHeoHHTjErjSA3D3FmXrtEw/viewform?embedded=true" width="700" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe> 
+	<br>
+	<h2><a href="https://docs.google.com/forms/d/e/1FAIpQLSflmazMV061cQovIJfcNHLWq14tHeoHHTjErjSA3D3FmXrtEw/viewform?usp=sf_link" target="_blank">Click here to answer the questionnaire on a separate page</a></h2>
+</center>
 
 <!-- <center>For a glimpse of the course content, check out the <a href="./ME6166_Jan_May_2019.html" target="_blank">website for the class offered last time</a>.</center><br> -->
 <br>
