--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -377,17 +377,18 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	<col width = "45%">	
    <tr> 
 	<td> Flame stability - flash back and blow off </td>
-	<td> <!-- <a href="https://owncloud.iitm.ac.in/index.php/s/Wz9PGgYfWCxlE7g" target="_blank">Grad school course notes, Bowman and Mitchell, 2006</a> --> </td> </tr>
+	<td> <a href="https://owncloud.iitm.ac.in/index.php/s/Wz9PGgYfWCxlE7g" target="_blank">Grad school course notes, Bowman and Mitchell, 2006</a> --> </td> </tr>
 
    <tr> 
 	<td> Domestic LPG stove burner - design concepts </td>
-	<td> <!-- VR $3.1.3, $3.1.4, VR $4.4--$4.6, HJ $3.1--$3.4 --> </td> </tr>
+	<td> VR $3.1.3, $3.1.4, VR $4.4--$4.6, HJ $3.1--$3.4 </td> </tr>
 	
-	<tr> <td> MILD combustion: Theory of extinction of well-stirred reactors  </td>
-	<td> <!-- <a href="https://www.sciencedirect.com/science/article/pii/S1540748902801432" target="_blank">MILD combustion burner</a>, VR $4.3 -->
-	</td></tr>
 	<tr> <td> Stationary gas turbines: Lean premixed combustion </td>
-	<td> <!-- <a href="https://oaktrust.library.tamu.edu/handle/1969.1/163372" target="_blank">Lean premixed combustion --> </td></tr>
+	<td> <a href="https://oaktrust.library.tamu.edu/handle/1969.1/163372" target="_blank">Lean premixed combustion </td></tr>
+
+	 <!--<tr> <td> MILD combustion: Theory of extinction of well-stirred reactors  </td>
+	<td> <a href="https://www.sciencedirect.com/science/article/pii/S1540748902801432" target="_blank">MILD combustion burner</a>, VR $4.3 -->
+	</td></tr>
 </table><br>
 
 	<h3> Module 4: Spray combustion and applications: <!-- <a href="https://owncloud.iitm.ac.in/index.php/s/7W9G78IN9FQ2YNy" target="_blank"> Tutorial </a> --> </h3>
